--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,8 +9,8 @@
     <body>
         <div class="navbar">
             <a href="{{ url_for('home') }}" class="navbar-brand">Home</a>
-            <a href="{{ url_for('enternew') }}" class="navbar-item">Add New Student</a>
-            <a href="{{ url_for('list') }}" class="navbar-item">Review and Edit Students</a>
+            <a href="{{ url_for('enternew') }}" class="navbar-item">Add New Item</a>
+            <a href="{{ url_for('list') }}" class="navbar-item">Review and Edit Items</a>
         </div>
 
         <div class="body-content">
